--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./dist/css/main.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
     <!-- navigator-->
@@ -448,13 +447,15 @@
         <div>
           <b class="contact">Подпишитесь на рассылку</b> <br />
           <div class="contact-lebel">
-            <input class="input-footer" type="email" name="mail" id="mail" placeholder="E-mail">
-            <label for="mail">
-            <b class="button lebel-footer">Подписаться
-              <svg class="fly" width="24" height="24">
-                <use href="./image/symbol-defs-opt.svg#icon-send"></use>
-              </svg></b>
-            </label>
+            <form class="form-footer">
+              <input class="input-footer" type="email" name="mail" id="mail" placeholder="E-mail">
+              <label for="mail">
+                <b class="button lebel-footer">Подписаться
+                  <svg class="fly" width="24" height="24">
+                    <use href="./image/symbol-defs-opt.svg#icon-send"></use>
+                  </svg></b>
+              </label>
+            </form>
           </div>
       </div>
     </footer>
